--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "express": "^4.17.3",
     "express-validator": "^6.14.0",
     "mongoose": "^6.2.2",
-    "mongoose-unique-validator": "^3.0.0",
-    "uuid": "^8.3.2"
+    "mongoose-unique-validator": "^3.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
