--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "express": "^4.17.3",
     "express-validator": "^6.14.0",
     "mongoose": "^5.7.8",
-    "mongoose-unique-validator": "^2.0.3"
+    "mongoose-unique-validator": "^2.0.3",
+    "multer": "^1.4.4",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
